--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mixin-deep",
   "description": "Deeply mix the properties of objects into the first object. Like merge-deep, but doesn't clone.",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "homepage": "https://github.com/jonschlinkert/mixin-deep",
   "author": {
     "name": "Jon Schlinkert",
@@ -29,12 +29,12 @@
     "test": "mocha"
   },
   "dependencies": {
-    "for-own": "^0.1.1",
-    "is-plain-object": "^0.1.0"
+    "for-own": "^0.1.3",
+    "is-plain-object": "https://registry.npmjs.org/is-plain-object/-/is-plain-object-2.0.0.tgz"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "^4.0.4"
+    "mocha": "^2.2.4",
+    "should": "^6.0.1"
   },
   "keywords": [
     "extend",
