--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
   "name": "mixin-deep",
   "description": "Deeply mix the properties of objects into the first object. Like merge-deep, but doesn't clone.",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "homepage": "https://github.com/jonschlinkert/mixin-deep",
-  "author": {
-    "name": "Jon Schlinkert",
-    "url": "https://github.com/jonschlinkert"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/jonschlinkert/mixin-deep.git"
-  },
+  "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
+  "repository": "jonschlinkert/mixin-deep",
   "bugs": {
     "url": "https://github.com/jonschlinkert/mixin-deep/issues"
   },
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/jonschlinkert/mixin-deep/blob/master/LICENSE"
-  },
+  "license": "MIT",
   "files": [
     "index.js"
   ],
@@ -30,13 +21,14 @@
   },
   "dependencies": {
     "for-own": "^0.1.3",
-    "is-plain-object": "https://registry.npmjs.org/is-plain-object/-/is-plain-object-2.0.0.tgz"
+    "is-plain-object": "^2.0.0"
   },
   "devDependencies": {
     "mocha": "^2.2.4",
     "should": "^6.0.1"
   },
   "keywords": [
+    "deep",
     "extend",
     "key",
     "keys",
