--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mixin-deep",
   "description": "Deeply mix the properties of objects into the first object. Like merge-deep, but doesn't clone.",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "homepage": "https://github.com/jonschlinkert/mixin-deep",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/mixin-deep",
@@ -20,12 +20,13 @@
     "test": "mocha"
   },
   "dependencies": {
-    "for-own": "^0.1.3",
-    "is-plain-object": "^2.0.0"
+    "for-in": "^0.1.4",
+    "is-extendable": "^0.1.1",
+    "lazy-cache": "^0.2.3"
   },
   "devDependencies": {
-    "mocha": "^2.2.4",
-    "should": "^6.0.1"
+    "mocha": "*",
+    "should": "*"
   },
   "keywords": [
     "deep",
@@ -39,5 +40,15 @@
     "properties",
     "util",
     "values"
-  ]
+  ],
+  "verbiage": {
+    "related": {
+      "list": [
+        "mixin-object",
+        "merge-deep",
+        "extend-shallow",
+        "defaults-deep"
+      ]
+    }
+  }
 }
