--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mixin-deep",
   "description": "Deeply mix the properties of objects into the first object. Like merge-deep, but doesn't clone.",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "homepage": "https://github.com/jonschlinkert/mixin-deep",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/mixin-deep",
@@ -21,8 +21,7 @@
   },
   "dependencies": {
     "for-in": "^0.1.4",
-    "is-extendable": "^0.1.1",
-    "lazy-cache": "^0.2.3"
+    "is-extendable": "^0.1.1"
   },
   "devDependencies": {
     "mocha": "*",
