--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,31 @@
 {
   "name": "mixin-deep",
   "description": "Deeply mix the properties of objects into the first object. Like merge-deep, but doesn't clone.",
-  "repository": "jonschlinkert/mixin-deep",
-  "license": "MIT",
+  "version": "1.1.3",
   "homepage": "https://github.com/jonschlinkert/mixin-deep",
   "authors": [
     "Jon Schlinkert (https://github.com/jonschlinkert)"
+  ],
+  "repository": "jonschlinkert/mixin-deep",
+  "bugs": {
+    "url": "https://github.com/jonschlinkert/mixin-deep/issues"
+  },
+  "license": "MIT",
+  "files": [
+    "index.js",
+    "LICENSE",
+    "README.md"
   ],
   "main": [
     "index.js"
   ],
   "dependencies": {
-    "for-in": "^0.1.4",
-    "is-extendable": "^0.1.1",
-    "lazy-cache": "^0.2.3"
+    "for-in": "^1.0.2",
+    "is-extendable": "^0.1.1"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "*"
+    "gulp-format-md": "^0.1.11",
+    "should": "^11.2.0"
   },
   "keywords": [
     "deep",
@@ -31,5 +39,15 @@
     "properties",
     "util",
     "values"
+  ],
+  "ignore": [
+    "actual",
+    "bower_components",
+    "fixtures",
+    "node_modules",
+    "temp",
+    "test",
+    "test.js",
+    "tmp"
   ]
 }
