--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "mixin-deep",
   "description": "Deeply mix the properties of objects into the first object. Like merge-deep, but doesn't clone.",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "homepage": "https://github.com/jonschlinkert/mixin-deep",
   "authors": [
     "Jon Schlinkert (https://github.com/jonschlinkert)"
@@ -12,20 +12,19 @@
   },
   "license": "MIT",
   "files": [
-    "index.js",
-    "LICENSE",
-    "README.md"
+    "index.js"
   ],
   "main": [
     "index.js"
   ],
   "dependencies": {
     "for-in": "^1.0.2",
-    "is-extendable": "^0.1.1"
+    "is-extendable": "^1.0.1"
   },
   "devDependencies": {
-    "gulp-format-md": "^0.1.11",
-    "should": "^11.2.0"
+    "gulp-format-md": "^1.0.0",
+    "mocha": "^3.5.3",
+    "should": "^13.1.3"
   },
   "keywords": [
     "deep",
