--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mixin-deep",
-  "description": "Deeply mix the properties of objects into the first object. Like merge-deep, but doesn't clone.",
-  "version": "1.3.1",
+  "description": "Deeply mix the properties of objects into the first object. Like merge-deep, but doesn't clone. No dependencies.",
+  "version": "1.3.0",
   "homepage": "https://github.com/jonschlinkert/mixin-deep",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/mixin-deep",
@@ -14,19 +14,14 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
     "test": "mocha"
   },
-  "dependencies": {
-    "for-in": "^1.0.2",
-    "is-extendable": "^1.0.1"
-  },
   "devDependencies": {
     "gulp-format-md": "^1.0.0",
-    "mocha": "^3.5.3",
-    "should": "^13.1.3"
+    "mocha": "^5.2.0"
   },
   "keywords": [
     "deep",
